tests/baselines/reference/plainJSGrammarErrors3.errors.txt
/a.js(2,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.


==== plainJSGrammarErrors3.js (0 errors) ====
    
==== /a.js (1 errors) ====
    function foo() {
        await new Promise(undefined);
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
!!! related TS1356 /a.js:1:10: Did you mean to mark this function as 'async'?
    }
    